@@ -1,25 +1,41 @@
 package io.antmedia.muxer;
 
 import static io.antmedia.muxer.IAntMediaStreamHandler.BROADCAST_STATUS_BROADCASTING;
-import static org.bytedeco.ffmpeg.global.avcodec.*;
-import static org.bytedeco.ffmpeg.global.avutil.*;
+import static org.bytedeco.ffmpeg.global.avcodec.AV_CODEC_ID_AAC;
+import static org.bytedeco.ffmpeg.global.avcodec.AV_CODEC_ID_H264;
+import static org.bytedeco.ffmpeg.global.avcodec.AV_CODEC_ID_H265;
+import static org.bytedeco.ffmpeg.global.avcodec.AV_CODEC_ID_PNG;
+import static org.bytedeco.ffmpeg.global.avcodec.AV_PKT_FLAG_KEY;
+import static org.bytedeco.ffmpeg.global.avutil.AVMEDIA_TYPE_ATTACHMENT;
+import static org.bytedeco.ffmpeg.global.avutil.AVMEDIA_TYPE_AUDIO;
+import static org.bytedeco.ffmpeg.global.avutil.AVMEDIA_TYPE_DATA;
+import static org.bytedeco.ffmpeg.global.avutil.AVMEDIA_TYPE_SUBTITLE;
+import static org.bytedeco.ffmpeg.global.avutil.AVMEDIA_TYPE_VIDEO;
+import static org.bytedeco.ffmpeg.global.avutil.AV_PIX_FMT_YUV420P;
+import static org.bytedeco.ffmpeg.global.avutil.AV_SAMPLE_FMT_FLTP;
+import static org.bytedeco.ffmpeg.global.avutil.av_channel_layout_default;
+import static org.bytedeco.ffmpeg.global.avutil.av_free;
+import static org.bytedeco.ffmpeg.global.avutil.av_malloc;
+import static org.bytedeco.ffmpeg.global.avutil.av_rescale_q;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Deque;
 import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
+import java.util.Queue;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentLinkedDeque;
 import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.concurrent.ConcurrentSkipListSet;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 
-import io.antmedia.logger.LoggerUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.apache.mina.core.buffer.IoBuffer;
 import org.bytedeco.ffmpeg.avcodec.AVCodecContext;
@@ -31,6 +47,7 @@ import org.bytedeco.ffmpeg.avutil.AVChannelLayout;
 import org.bytedeco.ffmpeg.avutil.AVRational;
 import org.bytedeco.javacpp.BytePointer;
 import org.red5.codec.AVCVideo;
+import org.red5.codec.HEVCVideo;
 import org.red5.codec.IAudioStreamCodec;
 import org.red5.codec.IStreamCodecInfo;
 import org.red5.codec.IVideoStreamCodec;
@@ -41,6 +58,9 @@ import org.red5.server.api.stream.IBroadcastStream;
 import org.red5.server.api.stream.IStreamCapableConnection;
 import org.red5.server.api.stream.IStreamPacket;
 import org.red5.server.net.rtmp.event.CachedEvent;
+import org.red5.server.net.rtmp.event.VideoData;
+import org.red5.server.net.rtmp.event.VideoData.ExVideoPacketType;
+import org.red5.server.net.rtmp.event.VideoData.FrameType;
 import org.red5.server.net.rtmp.message.Constants;
 import org.red5.server.stream.ClientBroadcastStream;
 import org.red5.server.stream.IRecordingListener;
@@ -58,10 +78,15 @@ import io.antmedia.analytic.model.PublishStatsEvent;
 import io.antmedia.datastore.db.DataStore;
 import io.antmedia.datastore.db.IDataStoreFactory;
 import io.antmedia.datastore.db.types.Broadcast;
+import io.antmedia.datastore.db.types.BroadcastUpdate;
 import io.antmedia.datastore.db.types.Endpoint;
+import io.antmedia.eRTMP.HEVCDecoderConfigurationParser;
+import io.antmedia.eRTMP.HEVCVideoEnhancedRTMP;
+import io.antmedia.logger.LoggerUtils;
 import io.antmedia.muxer.parser.AACConfigParser;
 import io.antmedia.muxer.parser.AACConfigParser.AudioObjectTypes;
-import io.antmedia.muxer.parser.SpsParser;
+import io.antmedia.muxer.parser.Parser;
+import io.antmedia.muxer.parser.SPSParser;
 import io.antmedia.muxer.parser.codec.AACAudio;
 import io.antmedia.plugin.PacketFeeder;
 import io.antmedia.plugin.api.IPacketListener;
@@ -154,14 +179,14 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 	protected IScope scope;
 
 	private String oldQuality;
-	public static final  AVRational TIME_BASE_FOR_MS;
+
 	private IAntMediaStreamHandler appAdapter;
 
 	protected List<EncoderSettings> encoderSettingsList;
 	protected static boolean isStreamSource = false;
 
 	private int previewCreatePeriod;
-	private double oldspeed;
+	private double latestSpeed;
 	private long lastQualityUpdateTime = 0;
 	private Broadcast broadcast;
 	protected AppSettings appSettings;
@@ -181,7 +206,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 	 * Value is the system time at that moment
 	 *
 	 */
-	private LinkedList<PacketTime> packetTimeList = new LinkedList<PacketTime>();
+	private Deque<PacketTime> packetTimeList = new ConcurrentLinkedDeque<>();
 
 	public boolean addID3Data(String data) {
 		for (Muxer muxer : muxerList) {
@@ -246,7 +271,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 	private byte[] videoDataConf;
 	private byte[] audioDataConf;
 	private AtomicInteger queueSize = new AtomicInteger(0);
-	private long startTimeMs;
+	//private long startTimeMs;
 	protected long totalIngestTime;
 	private int fps = 0;
 	private int width;
@@ -268,18 +293,33 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 
 	private static final int COUNT_TO_LOG_BUFFER = 500;
 
-	static {
-		TIME_BASE_FOR_MS = new AVRational();
-		TIME_BASE_FOR_MS.num(1);
-		TIME_BASE_FOR_MS.den(1000);
+	/**
+	 * Helper field to get the timebase for milliseconds
+	 * Pay attention: Use them in basic conversions(av_rescale), do not use them by giving directly to the Muxers, Encoders as Timebase because
+	 * Muxers and Encoders can close the timebase and we'll get error
+	 * 
+	 * For muxers, encoders, use the gettimebaseForMs() method
+	 */
+	public static final AVRational TIME_BASE_FOR_MS = new AVRational().num(1).den(1000);
+
+	@SuppressWarnings("java:S2095")
+	public static AVRational getTimeBaseForMs() {
+		//create new instance because it can be used in references
+		return new AVRational().num(1).den(1000);
 	}
 
-	private AVRational videoTimeBase = TIME_BASE_FOR_MS;
-	private AVRational audioTimeBase = TIME_BASE_FOR_MS;
+	private AVRational videoTimeBase = getTimeBaseForMs();
+	private AVRational audioTimeBase = getTimeBaseForMs();
 
 	//NOSONAR because we need to keep the reference of the field
 	protected AVChannelLayout channelLayout;
 	private long lastTotalByteReceived = 0;
+
+
+	private long durationMs;
+
+
+	private int videoCodecId = -1;
 
 
 	public static MuxAdaptor initializeMuxAdaptor(ClientBroadcastStream clientBroadcastStream, Broadcast broadcast, boolean isSource, IScope scope) {
@@ -321,9 +361,9 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 	{
 		return (broadcast != null && broadcast.getEncoderSettingsList() != null && !broadcast.getEncoderSettingsList().isEmpty()) 
 				||
-					(appSettings.getEncoderSettings() != null && !appSettings.getEncoderSettings().isEmpty()) 
+				(appSettings.getEncoderSettings() != null && !appSettings.getEncoderSettings().isEmpty()) 
 				||
-					appSettings.isWebRTCEnabled() 
+				appSettings.isWebRTCEnabled() 
 				||  appSettings.isForceDecoding();
 	}
 
@@ -382,7 +422,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 		return init(conn.getScope(), name, isAppend);
 	}
 
-	protected void enableSettings() {
+	public void enableSettings() {
 		AppSettings appSettingsLocal = getAppSettings();
 		hlsMuxingEnabled = appSettingsLocal.isHlsMuxingEnabled();
 		dashMuxingEnabled = appSettingsLocal.isDashMuxingEnabled();
@@ -397,6 +437,20 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 		hlsListSize = appSettingsLocal.getHlsListSize();
 		hlsTime = appSettingsLocal.getHlsTime();
 		hlsPlayListType = appSettingsLocal.getHlsPlayListType();
+
+		Broadcast.HLSParameters broadcastHLSParameters = getBroadcast().getHlsParameters();
+		if(broadcastHLSParameters != null) {
+			if(StringUtils.isNotBlank(broadcastHLSParameters.getHlsListSize())) {
+				hlsListSize = broadcastHLSParameters.getHlsListSize();
+			}
+			if(StringUtils.isNotBlank(broadcastHLSParameters.getHlsTime())) {
+				hlsTime = broadcastHLSParameters.getHlsTime();
+			}
+			if(StringUtils.isNotBlank(broadcastHLSParameters.getHlsPlayListType())) {
+				hlsPlayListType = broadcastHLSParameters.getHlsPlayListType();
+			}
+		}
+
 		dashSegDuration = appSettingsLocal.getDashSegDuration();
 		dashFragmentDuration = appSettingsLocal.getDashFragmentDuration();
 		targetLatency = appSettingsLocal.getTargetLatency();
@@ -404,8 +458,8 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 		previewOverwrite = appSettingsLocal.isPreviewOverwrite();
 
 		encoderSettingsList = (getBroadcast() != null && getBroadcast().getEncoderSettingsList() != null && !getBroadcast().getEncoderSettingsList().isEmpty()) 
-										? getBroadcast().getEncoderSettingsList() 
-											: appSettingsLocal.getEncoderSettings();
+				? getBroadcast().getEncoderSettingsList() 
+						: appSettingsLocal.getEncoderSettings();
 
 		previewCreatePeriod = appSettingsLocal.getCreatePreviewPeriod();
 		maxAnalyzeDurationMS = appSettingsLocal.getMaxAnalyzeDurationMS();
@@ -434,7 +488,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 		getDataStore();
 
 		//TODO: Refactor -> saving broadcast is called two times in RTMP ingesting. It should be one time
-		getStreamHandler().updateBroadcastStatus(streamId, startTimeMs, IAntMediaStreamHandler.PUBLISH_TYPE_RTMP, getDataStore().get(streamId));
+		getStreamHandler().updateBroadcastStatus(streamId, 0, IAntMediaStreamHandler.PUBLISH_TYPE_RTMP, getDataStore().get(streamId));
 
 		enableSettings();
 		initServerSettings();
@@ -449,14 +503,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 		}
 
 		if (hlsMuxingEnabled) {
-
-			HLSMuxer hlsMuxer = new HLSMuxer(vertx, storageClient, getAppSettings().getS3StreamsFolderPath(), getAppSettings().getUploadExtensionsToS3(), getAppSettings().getHlsHttpEndpoint(), getAppSettings().isAddDateTimeToHlsFileName());
-			hlsMuxer.setHlsParameters( hlsListSize, hlsTime, hlsPlayListType, getAppSettings().getHlsflags(), getAppSettings().getHlsEncryptionKeyInfoFile(), getAppSettings().getHlsSegmentType());
-			hlsMuxer.setDeleteFileOnExit(deleteHLSFilesOnExit);
-			hlsMuxer.setId3Enabled(appSettings.isId3TagEnabled());
-			hlsMuxer.setSeiEnabled(appSettings.isSeiEnabled());
-			addMuxer(hlsMuxer);
-			logger.info("adding HLS Muxer for {}", streamId);
+			addHLSMuxer();
 		}
 
 		getDashMuxer();
@@ -469,6 +516,17 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 		}
 		getStreamHandler().muxAdaptorAdded(this);
 		return true;
+	}
+
+	public HLSMuxer addHLSMuxer() {
+		HLSMuxer hlsMuxer = new HLSMuxer(vertx, storageClient, getAppSettings().getS3StreamsFolderPath(), getAppSettings().getUploadExtensionsToS3(), getAppSettings().getHlsHttpEndpoint(), getAppSettings().isAddDateTimeToHlsFileName());
+		hlsMuxer.setHlsParameters( hlsListSize, hlsTime, hlsPlayListType, getAppSettings().getHlsflags(), getAppSettings().getHlsEncryptionKeyInfoFile(), getAppSettings().getHlsSegmentType());
+		hlsMuxer.setDeleteFileOnExit(deleteHLSFilesOnExit);
+		hlsMuxer.setId3Enabled(appSettings.isId3TagEnabled());
+		addMuxer(hlsMuxer);
+		logger.info("adding HLS Muxer for {}", streamId);
+
+		return hlsMuxer;
 	}
 
 	public Muxer getDashMuxer()
@@ -623,14 +681,65 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 	public AVCodecParameters getVideoCodecParameters() 
 	{
 		if (videoDataConf != null && videoCodecParameters == null) {
-			SpsParser spsParser = new SpsParser(getAnnexbExtradata(videoDataConf), 5);
+
+			Parser parser = null;
+			if (videoCodecId == AV_CODEC_ID_H264) 
+			{
+				/*
+						unsigned int(8) configurationVersion = 1;
+						unsigned int(8) AVCProfileIndication;
+						unsigned int(8) profile_compatibility;
+						unsigned int(8) AVCLevelIndication; 
+						bit(6) reserved = '111111'b;
+						unsigned int(2) lengthSizeMinusOne; 
+						bit(3) reserved = '111'b;
+						unsigned int(5) numOfSequenceParameterSets;
+						for (i = 0; i < numOfSequenceParameterSets; i++) {
+							unsigned int(16) sequenceParameterSetLength ;
+							bit(8*sequenceParameterSetLength) sequenceParameterSetNALUnit;
+						}
+						unsigned int(8) numOfPictureParameterSets;
+						for (i = 0; i < numOfPictureParameterSets; i++) {
+							unsigned int(16) pictureParameterSetLength;
+							bit(8*pictureParameterSetLength) pictureParameterSetNALUnit;
+						}
+						if (profile_idc == 100 || profile_idc == 110 ||
+						    profile_idc == 122 || profile_idc == 144)
+						{
+							bit(6) reserved = '111111'b;
+							unsigned int(2) chroma_format;
+							bit(5) reserved = '11111'b;
+							unsigned int(3) bit_depth_luma_minus8;
+							bit(5) reserved = '11111'b;
+							unsigned int(3) bit_depth_chroma_minus8;
+							unsigned int(8) numOfSequenceParameterSetExt;
+							for (i = 0; i < numOfSequenceParameterSetExt; i++) {
+								unsigned int(16) sequenceParameterSetExtLength;
+								bit(8*sequenceParameterSetExtLength) sequenceParameterSetExtNALUnit;
+							}
+						}
+					}
+				 */
+
+				//convert above structure to sps and pps annexb
+				parser = new SPSParser(getAnnexbExtradata(videoDataConf), 5);
+			}
+			else if (videoCodecId == AV_CODEC_ID_H265) {
+
+				parser = new HEVCDecoderConfigurationParser(videoDataConf, 0);
+
+			}
+			else {
+				throw new IllegalArgumentException("Unsupported codec id for video:" + videoCodecId);
+			}
+
 
 			videoCodecParameters = new AVCodecParameters();
-			width = spsParser.getWidth();
-			height = spsParser.getHeight();
-			videoCodecParameters.width(spsParser.getWidth());
-			videoCodecParameters.height(spsParser.getHeight());
-			videoCodecParameters.codec_id(AV_CODEC_ID_H264);
+			width = parser.getWidth();
+			height = parser.getHeight();
+			videoCodecParameters.width(parser.getWidth());
+			videoCodecParameters.height(parser.getHeight());
+			videoCodecParameters.codec_id(videoCodecId);
 			videoCodecParameters.codec_type(AVMEDIA_TYPE_VIDEO);
 
 
@@ -657,7 +766,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 		AVCodecParameters codecParameters = getVideoCodecParameters();
 		if (codecParameters != null) {
 			logger.info("Incoming video width: {} height:{} stream:{}", codecParameters.width(), codecParameters.height(), streamId);
-			addStream2Muxers(codecParameters, TIME_BASE_FOR_MS, streamIndex);
+			addStream2Muxers(codecParameters, getTimeBaseForMs(), streamIndex);
 			videoStreamIndex = streamIndex;
 			streamIndex++;
 		}
@@ -665,7 +774,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 
 		AVCodecParameters parameters = getAudioCodecParameters();
 		if (parameters != null) {
-			addStream2Muxers(parameters, TIME_BASE_FOR_MS, streamIndex);
+			addStream2Muxers(parameters, getTimeBaseForMs(), streamIndex);
 			audioStreamIndex = streamIndex;
 		}
 		else {
@@ -684,12 +793,14 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 		if(broadcastStream.getParameters() != null) {
 			String mainTrack = broadcastStream.getParameters().get("mainTrack");
 			if(mainTrack != null) {
-				Broadcast broadcastLocal = getBroadcast();
-				broadcastLocal.setMainTrackStreamId(mainTrack);
-				getDataStore().updateBroadcastFields(streamId, broadcastLocal);
+				BroadcastUpdate broadcastUpdate = new BroadcastUpdate();
+				broadcastUpdate.setMainTrackStreamId(mainTrack);
+				
+				getDataStore().updateBroadcastFields(streamId, broadcastUpdate);
 
 				Broadcast mainBroadcast = getDataStore().get(mainTrack);
-				if(mainBroadcast == null) {
+				if(mainBroadcast == null) 
+				{
 					mainBroadcast = new Broadcast();
 					try {
 						mainBroadcast.setStreamId(mainTrack);
@@ -701,9 +812,13 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 					mainBroadcast.getSubTrackStreamIds().add(streamId);
 					getDataStore().save(mainBroadcast);
 				}
-				else {
+				else 
+				{
 					mainBroadcast.getSubTrackStreamIds().add(streamId);
-					getDataStore().updateBroadcastFields(mainTrack, mainBroadcast);
+					BroadcastUpdate broadcastMainUpdate = new BroadcastUpdate();
+					broadcastMainUpdate.setSubTrackStreamIds(mainBroadcast.getSubTrackStreamIds());
+					
+					getDataStore().updateBroadcastFields(mainTrack, broadcastMainUpdate);
 				}
 			}
 		}
@@ -875,6 +990,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 	public void updateStreamQualityParameters(String streamId, String quality, double speed, int inputQueueSize) {
 		long now = System.currentTimeMillis();
 
+		latestSpeed = speed;
 		//increase updating time to STAT_UPDATE_PERIOD_MS seconds because it may cause some issues in mongodb updates 
 		//or 
 		//update before STAT_UPDATE_PERIOD_MS if speed something meaningful
@@ -884,21 +1000,27 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 			lastQualityUpdateTime = now;
 			long byteTransferred = totalByteReceived - lastTotalByteReceived;
 			lastTotalByteReceived = totalByteReceived;
-			
-			
+
+
 			PublishStatsEvent publishStatsEvent = new PublishStatsEvent();
 			publishStatsEvent.setApp(scope.getName());
 			publishStatsEvent.setStreamId(streamId);
 			publishStatsEvent.setTotalByteReceived(totalByteReceived);
 			publishStatsEvent.setByteTransferred(byteTransferred);
-			publishStatsEvent.setDurationMs(System.currentTimeMillis() - broadcast.getStartTime());
+			durationMs = System.currentTimeMillis() - broadcast.getStartTime();
+			publishStatsEvent.setDurationMs(durationMs);
 			publishStatsEvent.setWidth(width);
 			publishStatsEvent.setHeight(height);
-			
+
 			getStreamHandler().setQualityParameters(streamId, quality, speed, inputQueueSize, System.currentTimeMillis());
 			oldQuality = quality;
-			oldspeed = speed;
 		}
+
+
+	}
+
+	public double getLatestSpeed() {
+		return latestSpeed;
 	}
 
 	public IAntMediaStreamHandler getStreamHandler() {
@@ -933,7 +1055,8 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 
 	public void writeStreamPacket(IStreamPacket packet) 
 	{
-		long dts = packet.getTimestamp() & 0xffffffffL;
+		long dts = Integer.toUnsignedLong(packet.getTimestamp());
+		
 		if (packet.getDataType() == Constants.TYPE_VIDEO_DATA)
 		{
 
@@ -942,32 +1065,75 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 				return;
 			}
 
+			CachedEvent videoData = (CachedEvent) packet;
 			logger.trace("writeVideoBuffer video data packet timestamp:{} and packet timestamp:{} streamId:{}", dts, packet.getTimestamp(), streamId);
-			measureIngestTime(dts, ((CachedEvent)packet).getReceivedTime());
+			
+			measureIngestTime(dts, videoData.getReceivedTime());
+			
+			//we skip first video packet because it's a decoder configuration
 			if (!firstVideoPacketSkipped) {
 				firstVideoPacketSkipped = true;
 				return;
 			}
 			int bodySize = packet.getData().limit();
-			byte frameType = packet.getData().position(0).get();
 
-			//position 1 nalu type
-			//position 2,3,4 composition time offset
-			int compositionTimeOffset = (packet.getData().position(2).get() << 16)  | packet.getData().position(3).getShort();
-			long pts = dts + compositionTimeOffset;
+			boolean isKeyFrame = videoData.getFrameType() == FrameType.KEYFRAME;
 
+			long pts = dts;
+			//first 5 bytes in flv video tag header
+			byte offset = 5;
+			long initialCompositionTimeByte = 0;
+			long shortValueCompositionTime = 0;
+			if (videoData.isExVideoHeader()) 
+			{
+				//handle composition time offset 
+				
+				// https://veovera.org/docs/enhanced/enhanced-rtmp-v2.pdf
+				
+				if (videoData.getExVideoPacketType() == ExVideoPacketType.CODED_FRAMES) {
+					//header implementation is available in VideoData
+					
+					//when the packet type is coded frames, first 3 bytes are the time offset
+                    
+					//get the first byte and shift to left for two bytes and increase the offset by one and get the short value
+					initialCompositionTimeByte = Byte.toUnsignedLong(packet.getData().position(offset).get());
+					//increase offset because we use it below
+					offset++;
+					shortValueCompositionTime = Short.toUnsignedLong(packet.getData().position(offset).getShort());
+					//increase offset because we use it below to get the correct data
+					offset+=2;
+				}
+			}
+			else			
+			{
+				
+				//first byte is frametype - u(4) + codecId - u(4)
+				//second byte is av packet type - u(8)
+				//next 3 bytes composition time offset is 24 bits signed integer
+				
+				// VideoTag E.4.3.1 -> https://veovera.org/docs/legacy/video-file-format-v10-1-spec.pdf
+				
+				initialCompositionTimeByte = Byte.toUnsignedLong(packet.getData().position(2).get());
+				shortValueCompositionTime =  Short.toUnsignedLong(packet.getData().position(3).getShort());
+
+			}
+			
+			long compositionTimeOffset = ((initialCompositionTimeByte << 16) | shortValueCompositionTime);
+
+			
+			pts = dts + compositionTimeOffset;
 			//we get 5 less bytes because first 5 bytes is related to the video tag. It's not part of the generic packet
-			ByteBuffer byteBuffer = ByteBuffer.allocateDirect(bodySize-5);
-			byteBuffer.put(packet.getData().buf().position(5));
+			ByteBuffer byteBuffer = ByteBuffer.allocateDirect(bodySize-offset);
+			byteBuffer.put(packet.getData().buf().position(offset));
 
 
 			synchronized (muxerList) 
 			{
-				packetFeeder.writeVideoBuffer(byteBuffer, dts, 0, videoStreamIndex, (frameType & 0xF0) == IVideoStreamCodec.FLV_FRAME_KEY, 0, pts);
+				packetFeeder.writeVideoBuffer(byteBuffer, dts, 0, videoStreamIndex, isKeyFrame, 0, pts);
 
 				for (Muxer muxer : muxerList) 
 				{
-					muxer.writeVideoBuffer(byteBuffer, dts, 0, videoStreamIndex, (frameType & 0xF0) == IVideoStreamCodec.FLV_FRAME_KEY, 0, pts);
+					muxer.writeVideoBuffer(byteBuffer, dts, 0, videoStreamIndex, isKeyFrame, 0, pts);
 				}
 			}
 
@@ -1094,10 +1260,18 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 
 					if (packet.getDataType() == Constants.TYPE_VIDEO_DATA)
 					{
+						//if type is video data then it's VideoData
+						CachedEvent video = (CachedEvent)packet;
+						//isKeyFrame = videoData.getFrameType() == FrameType.KEYFRAME;
+
 						byte frameType = packet.getData().position(0).get();
-						isKeyFrame = (frameType & 0xF0) == IVideoStreamCodec.FLV_FRAME_KEY;
+					//	isKeyFrame = (frameType & 0xF0) == IVideoStreamCodec.FLV_FRAME_KEY;
+					
+						isKeyFrame = video.getFrameType() == FrameType.KEYFRAME;
+						
 						if(!firstKeyFrameReceivedChecked) {
-							if (isKeyFrame) {
+							if (isKeyFrame) 
+							{
 								firstKeyFrameReceivedChecked = true;
 								if (!appAdapter.isValidStreamParameters(width, height, fps, 0, streamId)) {
 									logger.info("Stream({}) has not passed specified validity checks so it's stopping", streamId);
@@ -1152,6 +1326,9 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 
 		bufferQueue.add(packet);
 
+	}
+
+	public void calculateBufferStatus() {
 		try {
 			IStreamPacket pktHead = bufferQueue.first();
 			IStreamPacket pktTrailer = bufferQueue.last();
@@ -1206,24 +1383,46 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 			//You may or may not ignore this exception @mekya
 			logger.warn("You may or may not ignore this exception. I mean It can happen time to time in multithread environment -> {}", e.getMessage());
 		}
-
-
 	}
 
 
-	private void getVideoDataConf(IStreamCodecInfo codecInfo) {
-		if (enableVideo) {
+	public void getVideoDataConf(IStreamCodecInfo codecInfo) {
+		if (enableVideo) 
+		{
 			IVideoStreamCodec videoCodec = codecInfo.getVideoCodec();
-			if (videoCodec instanceof AVCVideo)
+			//if it's AVC or HEVC, get the decoder configuration
+			//HEVC is supported in two way. 
+			//One of them Enhanced RTMP
+			//Second one is using video codec id 12. 
+			//Larix broadcaster supports video codec id 12 mode
+			if (videoCodec instanceof AVCVideo || videoCodec instanceof HEVCVideoEnhancedRTMP || videoCodec instanceof HEVCVideo)
 			{
+				//pay attention that HEVCVideo is subclass of AVCVideo
+				if (videoCodec instanceof HEVCVideoEnhancedRTMP || videoCodec instanceof HEVCVideo)
+				 {
+					videoCodecId  = AV_CODEC_ID_H265;
+					//There is a 5 byte offset below for enhanced rtmp
+					//1 byte is (exVideoHeader(1 bit) + frametype(3bit) + videoPacketType(4bit)), 4 bytes fourcc = 5 bytes
+
+				}
+				else {
+					videoCodecId = AV_CODEC_ID_H264;
+					//There is a 5 byte offset below
+					//1 byte is (frametype(4bit)+codecId(4bit)), 1 byte AVPacketType,  3 byte compositionTime
+
+				}
+				
+
 				IoBuffer videoBuffer = videoCodec.getDecoderConfiguration();
+
 				if (videoBuffer != null) {
 					videoDataConf = new byte[videoBuffer.limit()-5];
 					videoBuffer.position(5).get(videoDataConf);
 				}
+
 			}
 			else {
-				logger.warn("Video codec is not AVC(H264) for stream: {}", streamId);
+				logger.warn("Video codec is not AVC(H264) or HEVC(H265) for stream: {}", streamId);
 			}
 		}
 	}
@@ -1292,7 +1491,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 
 		if (packetTimeList.size() > 300) {
 			//limit the size.
-			packetTimeList.remove(0);
+			packetTimeList.removeFirst();
 		}
 
 		PacketTime firstPacket = packetTimeList.getFirst();
@@ -1321,9 +1520,12 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 				timeDiff = av_rescale_q(keyFrameDiff, getVideoTimeBase(), TIME_BASE_FOR_MS);
 				logger.debug("KeyFrame time difference ms:{} for streamId:{}", timeDiff, streamId);
 			}
-			
+
 			lastKeyFramePTS = pts;
-			if (timeDiff > 30) {
+			if (timeDiff > 30) 
+			{ 
+				//timediff is in milliseconds, this is a some kind of hack here because as I remember,
+				//RTMP does not report key frame interval correctly in all cases or something that I don't know @mekya
 				keyFramePerMin += 1;
 			}
 			if(lastPacket.systemTimeMs - lastKeyFrameStatsTimeMs > 60000)
@@ -1333,9 +1535,9 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 				keyFrameStatsEvent.setApp(scope.getName());
 				keyFrameStatsEvent.setKeyFramesInLastMinute(keyFramePerMin);
 				keyFrameStatsEvent.setKeyFrameIntervalMs((int)timeDiff);
-				
+
 				LoggerUtils.logAnalyticsFromServer(keyFrameStatsEvent);
-				
+
 				keyFramePerMin = 0;
 				lastKeyFrameStatsTimeMs = lastPacket.systemTimeMs;
 			}
@@ -1344,7 +1546,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 		// total bitrate
 		totalByteReceived = broadcastStream !=null ? broadcastStream.getBytesReceived() :  totalByteReceived + packetSize;
 
-		
+
 		updateStreamQualityParameters(this.streamId, null, speed, getInputQueueSize());
 
 	}
@@ -1402,17 +1604,17 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 		for (Muxer muxer : muxerList) {
 			muxer.writeTrailer();
 		}
-		
+
 		long byteTransferred = totalByteReceived - lastTotalByteReceived;
 		lastTotalByteReceived = totalByteReceived;
-		
+
 		PublishStatsEvent publishStatsEvent = new PublishStatsEvent();
 		publishStatsEvent.setApp(scope.getName());
 		publishStatsEvent.setStreamId(streamId);
 		publishStatsEvent.setTotalByteReceived(totalByteReceived);
 		publishStatsEvent.setByteTransferred(byteTransferred);
 		publishStatsEvent.setDurationMs(System.currentTimeMillis() - broadcast.getStartTime());
-		
+
 		LoggerUtils.logAnalyticsFromServer(publishStatsEvent);
 	}
 
@@ -1475,7 +1677,6 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 	@Override
 	public void start() {
 		logger.info("Number of items in the queue while adaptor is being started to prepare is {}", getInputQueueSize());
-		startTimeMs = System.currentTimeMillis();
 
 		vertx.executeBlocking(() -> {
 			logger.info("before prepare for {}", streamId);
@@ -1557,6 +1758,9 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 
 			if (isBufferedWriterRunning.compareAndSet(false, true)) {
 				try {
+					
+					calculateBufferStatus();
+
 					if (!buffering.get())
 					{
 						while(!bufferQueue.isEmpty())
@@ -1643,11 +1847,19 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 
 		queueSize.incrementAndGet();
 
+		
 		CachedEvent event = new CachedEvent();
 		event.setData(packet.getData().duplicate());
 		event.setDataType(packet.getDataType());
 		event.setReceivedTime(System.currentTimeMillis());
 		event.setTimestamp(packet.getTimestamp());
+		
+		if (packet instanceof VideoData) {
+			VideoData comingVideoData = (VideoData) packet;
+			event.setExVideoHeader(comingVideoData.isExVideoHeader());
+			event.setExVideoPacketType(comingVideoData.getExVideoPacketType());
+			event.setFrameType(comingVideoData.getFrameType());
+		}
 
 		streamPacketQueue.add(event);
 
@@ -1877,7 +2089,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 			AVCodecParameters videoParameters = getVideoCodecParameters();
 			if (videoParameters != null) {
 				logger.info("Add video stream to muxer:{} for streamId:{}", muxer.getClass().getSimpleName(), streamId);
-				if (muxer.addStream(videoParameters, TIME_BASE_FOR_MS, videoStreamIndex)) {
+				if (muxer.addStream(videoParameters, getTimeBaseForMs(), videoStreamIndex)) {
 					streamAdded = true;
 				}
 			}
@@ -1885,7 +2097,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 			AVCodecParameters audioParameters = getAudioCodecParameters();
 			if (audioParameters != null) {
 				logger.info("Add audio stream to muxer:{} for streamId:{}", muxer.getClass().getSimpleName(), streamId);
-				if (muxer.addStream(audioParameters, TIME_BASE_FOR_MS, audioStreamIndex)) {
+				if (muxer.addStream(audioParameters, getTimeBaseForMs(), audioStreamIndex)) {
 					streamAdded = true;
 				}
 			}
@@ -2136,7 +2348,9 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 					logger.warn("Endpoint is not found to update its status to {} for rtmp url:{}", statusUpdate, endpoint.getRtmpUrl());
 				}
 			}
-			getDataStore().updateBroadcastFields(broadcast.getStreamId(), broadcast);
+			BroadcastUpdate broadcastUpdate = new BroadcastUpdate();
+			broadcastUpdate.setEndPointList(broadcast.getEndPointList());
+			getDataStore().updateBroadcastFields(broadcast.getStreamId(), broadcastUpdate);
 
 		}
 		else {
@@ -2267,7 +2481,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 		this.bufferingFinishTimeMs = bufferingFinishTimeMs;
 	}
 
-	public LinkedList<PacketTime> getPacketTimeList() {
+	public Queue<PacketTime> getPacketTimeList() {
 		return packetTimeList;
 	}
 
@@ -2348,7 +2562,7 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 	public void setHeight(int height) {
 		this.height = height;
 	}
-	
+
 	public int getHeight() {
 		return height;
 	}
@@ -2390,6 +2604,31 @@ public class MuxAdaptor implements IRecordingListener, IEndpointStatusListener {
 	public void setWidth(int width) {
 		this.width = width;
 	}
+
+	public void setTotalByteReceived(long totalByteReceived) {
+		this.totalByteReceived = totalByteReceived;
+	}
+
+	public long getDurationMs() {
+		return durationMs;
+	}
+
+	public void setDurationMs(long durationMs) {
+		this.durationMs = durationMs;
+	}
+
+	public int getVideoCodecId() {
+		return videoCodecId;
+	}
+
+	public void setVideoDataConf(byte[] videoDataConf) {
+		this.videoDataConf = videoDataConf;
+	}
+
+	public void setPacketFeeder(PacketFeeder packetFeeder) {
+		this.packetFeeder = packetFeeder;
+	}
+
 
 }
 
